my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EASSIGN_target_type/T_EASSIGN_target_type-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EASSIGN_TARGET_TYPE_STRUCT_H
#define T_EASSIGN_TARGET_TYPE_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EASSIGN_target_type(void);


#endif /* not T_EASSIGN_TARGET_TYPE_STRUCT_H */
